Add library images, series editing, likes and bookmarks
